<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=" com.example.android.buslocatoruser.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:title="@string/normal"
        android:id="@+id/mapTypeNormal"/>

    <item
        android:title="@string/satellite"
        android:id="@+id/mapTypeSatellite"/>

    <item
        android:title="@string/terrain"
        android:id="@+id/mapTypeTerrain"/>

    <item
        android:title="@string/hybrid"
        android:id="@+id/mapTypeHybrid"/>

    <item
        android:title="@string/none"
        android:id="@+id/mapTypeNone"/>
</menu>